Added screenshots and extent report

--- a/src/test/resources/configfiles/config.properties
+++ b/src/test/resources/configfiles/config.properties
@@ -1,2 +1,8 @@
 browser=chrome
 testUrl=https://dsportalapp.herokuapp.com/
+
+#Home page properties
+homePageUrl = https://dsportalapp.herokuapp.com/home
+homePageAlertMessage = You are not logged in
+useName = sunandab
+password = sunasdet112
