--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,7 @@
   <groupId>com.NumpyNinja</groupId>
   <artifactId>DSAlgoProject</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+
   <dependencies>
 	  <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 <dependency>
@@ -58,6 +59,12 @@
     <artifactId>extentreports</artifactId>
     <version>5.0.9</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
+<dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-log4j12</artifactId>
+    <version>2.0.7</version>
+</dependency>
 
 
 
