added excel reader file in utilities and few changes upadated in other pages

--- a/src/test/resources/configfiles/config.properties
+++ b/src/test/resources/configfiles/config.properties
@@ -6,3 +6,5 @@ homePageUrl = https://dsportalapp.herokuapp.com/home
 homePageAlertMessage = You are not logged in
 useName = sunandab
 password = sunasdet112
+
+excelPath=src/test/resources/configfiles/ExcelData.xlsx
