--- a/src/test/resources/configfiles/config.properties
+++ b/src/test/resources/configfiles/config.properties
@@ -1,10 +1,3 @@
 browser=chrome
-testUrl=https://dsportalapp.herokuapp.com/
-
-#Home page properties
-homePageUrl = https://dsportalapp.herokuapp.com/home
-homePageAlertMessage = You are not logged in
-useName = sunandab
-password = sunasdet112
-
+url=https://dsportalapp.herokuapp.com/
 excelPath=src/test/resources/configfiles/ExcelData.xlsx
